--- a/JsMozillaTutorial/index.html
+++ b/JsMozillaTutorial/index.html
@@ -4,7 +4,7 @@
     <title>Hello!</title>
 </head>
 <body>
-    <h1>Hello World!!</h1>
+    <h1>JS Tutorial</h1>
     <script type="text/javascript" data-main="Public/js/config/require.config.js" src="Public/js/libs/require/require.js"></script>
 </body>
 </html>
