--- a/JsMozillaTutorial/index.html
+++ b/JsMozillaTutorial/index.html
@@ -6,5 +6,6 @@
 <body>
     <h1>JS Tutorial</h1>
     <script type="text/javascript" data-main="Public/js/config/require.config.js" src="Public/js/libs/require/require.js"></script>
+    <div class="geolocation"></div>
 </body>
 </html>
